--- a/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main.json
+++ b/Frameworks/JitsiMeetSDK.xcframework/ios-x86_64-simulator/JitsiMeetSDK.framework/assets/lang/main.json
@@ -97,8 +97,8 @@
         "messageAccessibleTitleMe": "me says:",
         "smileysPanel": "Emoji panel",
         "tabs": {
-            "chat": "Chat",
-            "polls": "Polls"
+            "chat": "聊天",
+            "polls": "投票"
         },
         "title": "Chat",
         "titleWithPolls": "Chat and Polls",
@@ -575,9 +575,9 @@
     },
     "lockRoomPassword": "password",
     "lockRoomPasswordUppercase": "Password",
-    "me": "me",
+    "me": "我",
     "notify": {
-        "allowAction": "Allow",
+        "allowAction": "允许",
         "allowedUnmute": "You can unmute your microphone, start your camera or share your screen.",
         "audioUnmuteBlockedTitle": "Mic unmute blocked!",
         "audioUnmuteBlockedDescription": "Mic unmute operation has been temporarily blocked because of system limits.",
@@ -589,7 +589,7 @@
         "displayNotifications": "Display notifications for",
         "focus": "Conference focus",
         "focusFail": "{{component}} not available - retry in {{ms}} sec",
-        "hostAskedUnmute": "The moderator would like you to speak",
+        "hostAskedUnmute": "主持人想让你发言",
         "invitedOneMember": "{{name}} has been invited",
         "invitedThreePlusMembers": "{{name}} and {{count}} others have been invited",
         "invitedTwoMembers": "{{first}} and {{second}} have been invited",
@@ -644,68 +644,68 @@
         "videoUnmuteBlockedDescription": "Camera unmute and desktop sharing operation have been temporarily blocked because of system limits."
     },
     "participantsPane": {
-        "close": "Close",
+        "close": "关闭",
         "header": "参会者",
         "headings": {
-            "lobby": "Lobby ({{count}})",
+            "lobby": "表决 ({{count}})",
             "participantsList": "参会者 ({{count}})",
-            "waitingLobby": "Waiting in lobby ({{count}})"
+            "waitingLobby": "等待表决 ({{count}})"
         },
         "actions": {
-            "allow": "Allow attendees to:",
-            "allowVideo": "Allow video",
-            "audioModeration": "Unmute themselves",
-            "blockEveryoneMicCamera": "Block everyone's mic and camera",
+            "allow": "让参会者:",
+            "allowVideo": "允许视频",
+            "audioModeration": "静音状态",
+            "blockEveryoneMicCamera": "关闭所有人的麦克风和摄像头",
             "invite": "邀请参会人员",
-            "askUnmute": "Ask to unmute",
-            "moreModerationActions": "More moderation options",
-            "moreParticipantOptions": "More participant options",
-            "mute": "Mute",
+            "askUnmute": "要求静音状态",
+            "moreModerationActions": "更多的适度选项",
+            "moreParticipantOptions": "更多的参会者选项",
+            "mute": "静音",
             "muteAll": "全体静音",
-            "muteEveryoneElse": "Mute everyone else",
+            "muteEveryoneElse": "静音所有人",
             "stopEveryonesVideo": "关闭所有人的视频",
-            "stopVideo": "Stop video",
-            "unblockEveryoneMicCamera": "Unblock everyone's mic and camera",
-            "videoModeration": "Start their video",
-            "moreModerationControls": "More moderation controls"
+            "stopVideo": "停止视频",
+            "unblockEveryoneMicCamera": "打开所有人的麦克风和摄像头",
+            "videoModeration": "开始他们的视频",
+            "moreModerationControls": "更适度控制"
         },
         "search": "搜索参会人员"
     },
-    "passwordSetRemotely": "Set by another participant",
-    "passwordDigitsOnly": "Up to {{number}} digits",
+    "passwordSetRemotely": "设置其他参会者",
+    "passwordDigitsOnly": "最多 {{number}} 位",
     "polls": {
         "by": "By {{ name }}",
         "create": {
-            "addOption": "Add option",
-            "answerPlaceholder": "Option {{index}}",
-            "create": "Create a poll",
-            "cancel": "Cancel",
-            "pollOption" : "Poll option {{index}}",
-            "pollQuestion" : "Poll Question",
-            "questionPlaceholder": "Ask a question",
-            "removeOption": "Remove option",
-            "send": "Send"
+            "addOption": "添加选项",
+            "answerPlaceholder": "选项 {{index}}",
+            "create": "创建一个调查",
+            "cancel": "取消",
+            "pollOption" : "调查选项 {{index}}",
+            "pollQuestion" : "调查问题",
+            "questionPlaceholder": "回答问题",
+            "removeOption": "移除选项",
+            "send": "发送"
         },
         "answer": {
-            "skip": "Skip",
-            "submit": "Submit"
+            "skip": "跳过",
+            "submit": "提交"
         },
         "results": {
-            "vote": "Vote",
-            "changeVote": "Change vote",
-            "empty": "There are no polls in the meeting yet. Start a poll here!",
-            "hideDetailedResults": "Hide details",
-            "showDetailedResults": "Show details"
+            "vote": "投票",
+            "changeVote": "改变投票",
+            "empty": "会议还没有投票结果。在这里开始投票吧!",
+            "hideDetailedResults": "隐藏详情",
+            "showDetailedResults": "展示详情"
         },
         "notification": {
-            "title": "A new poll was added to this meeting",
-            "description": "Open polls tab to vote"
+            "title": "这次会议增加了一个新的民意测验",
+            "description": "打开投票标签"
         }
     },
-    "poweredby": "powered by",
+    "poweredby": "由",
     "prejoin": {
-        "audioAndVideoError": "Audio and video error:",
-        "audioDeviceProblem": "There is a problem with your audio device",
+        "audioAndVideoError": "音频和视频错误:",
+        "audioDeviceProblem": "您的音频设备有问题",
         "audioOnlyError": "Audio error:",
         "audioTrackError": "Could not create audio track.",
         "calling": "Calling",
@@ -783,8 +783,8 @@
         "setEmailLabel": "Set your gravatar email",
         "title": "Profile"
     },
-    "raisedHand": "Would like to speak",
-    "raisedHandsLabel": "Number of raised hands",
+    "raisedHand": "想要发言",
+    "raisedHandsLabel": "举手人数",
     "recording": {
         "limitNotificationDescriptionWeb": "Due to high demand your recording will be limited to {{limit}} min. For unlimited recordings try <a href={{url}} rel='noopener noreferrer' target='_blank'>{{app}}</a>.",
         "limitNotificationDescriptionNative": "Due to high demand your recording will be limited to {{limit}} min. For unlimited recordings try <3>{{app}}</3>.",
@@ -1123,12 +1123,12 @@
         "standardDefinition": "Standard definition"
     },
     "videothumbnail": {
-        "connectionInfo": "Connection Info",
-        "domute": "Mute",
-        "domuteVideo": "Disable camera",
-        "domuteOthers": "Mute everyone else",
-        "domuteVideoOfOthers": "Disable camera of everyone else",
-        "flip": "Flip",
+        "connectionInfo": "网络连接信息",
+        "domute": "静音",
+        "domuteVideo": "关闭摄像头",
+        "domuteOthers": "静音其他人",
+        "domuteVideoOfOthers": "关闭其他人的摄像头",
+        "flip": "翻转",
         "grantModerator": "Grant Moderator Rights",
         "hideSelfView": "Hide self view",
         "kick": "Kick out",
